Implemented BCF Command Manager

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
-# Created by https://www.gitignore.io/api/linux,maven,intellij+all
-# Edit at https://www.gitignore.io/?templates=linux,maven,intellij+all
+# Created by https://www.gitignore.io/api/linux,maven,intellij+iml
+# Edit at https://www.gitignore.io/?templates=linux,maven,intellij+iml
 
-### Intellij+all ###
+### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -72,21 +72,13 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-### Intellij+all Patch ###
-# Ignores the whole .idea folder and all .iml files
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
-
-.idea/
-
+### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
 *.iml
 modules.xml
 .idea/misc.xml
 *.ipr
-
-# Sonarlint plugin
-.idea/sonarlint
 
 ### Linux ###
 *~
@@ -116,7 +108,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
 
-# End of https://www.gitignore.io/api/linux,maven,intellij+all
+# End of https://www.gitignore.io/api/linux,maven,intellij+iml
 
 #**/target/
 
