--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>au.com.grieve</groupId>
     <artifactId>PortalNetwork</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>PortalNetwork</name>
@@ -36,7 +36,7 @@
     </properties>
 
     <build>
-        <defaultGoal>clean package</defaultGoal>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -136,8 +136,23 @@
         <dependency>
             <groupId>au.com.grieve.bcf</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>bundabrg-repo</id>
+            <url>
+                https://repo.worldguard.com.au/repository/maven-releases
+            </url>
+        </repository>
+        <snapshotRepository>
+            <id>bundabrg-repo</id>
+            <url>
+                https://repo.worldguard.com.au/repository/maven-snapshots
+            </url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
