--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,18 +2,16 @@
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 
 name: build
-on:
-  release:
-    types: [created]
+on: [push]
+#  release:
+#    types: [created]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
@@ -23,7 +21,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+#      - name: Publish to GitHub Packages Apache Maven
+#        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }}
