--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,10 @@
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 
 name: build
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'docs/**'
 #  release:
 #    types: [created]
 
