--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 mkdocs==1.1
+mkdocs-exclude==1.0.2
 mkdocs-material==5.1.3
 #mkpdfs-mkdocs==1.0.1
 git+https://github.com/jwaschkau/mkpdfs-mkdocs-plugin.git@fix/string-types
