--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PortalNetwork
-version: ${project.version}-dev
+version: "1.2.3"
 main: au.com.grieve.portalnetwork.PortalNetwork
 api-version: "1.13"
 authors: [Bundabrg]
