--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PortalNetwork
-version: "1.2.3"
+version: 1.3.0-dev
 main: au.com.grieve.portalnetwork.PortalNetwork
 api-version: "1.13"
 authors: [Bundabrg]
