--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,62 @@
 ## Don't touch ##
-version: 1
+version: 2
+
+## Portal Type Configuration
+portal:
+  nether:
+    item:
+      block: "GOLD_BLOCK"
+      name: "Portal Block (nether)"
+    block:
+      active: "BEACON"
+      inactive: "GOLD_BLOCK"
+    sound:
+      start: "BLOCK_BEACON_ACTIVATE"
+      stop: "BLOCK_BEACON_DEACTIVATE"
+    recipe:
+      items:
+        - "OOP"
+        - "ONO"
+        - "OOO"
+      mapping:
+        N: "NETHERITE_INGOT"
+        O: "OBSIDIAN"
+        P: "ENDER_PEARL"
+  end:
+    item:
+      block: "GOLD_BLOCK"
+      name: "Portal Block (end)"
+    block:
+      active: "BEACON"
+      inactive: "GOLD_BLOCK"
+    sound:
+      start: "BLOCK_BEACON_ACTIVATE"
+      stop: "BLOCK_BEACON_DEACTIVATE"
+    recipe:
+      items:
+        - "EEP"
+        - "ENE"
+        - "EEE"
+      mapping:
+        N: "NETHERITE_INGOT"
+        E: "END_STONE"
+        P: "ENDER_PEARL"
+  hidden:
+    item:
+      block: "GOLD_BLOCK"
+      name: "Portal Block (hidden)"
+    block:
+      active: "BEACON"
+      inactive: "GOLD_BLOCK"
+    sound:
+      start: "BLOCK_BEACON_ACTIVATE"
+      stop: "BLOCK_BEACON_DEACTIVATE"
+    recipe:
+      items:
+        - "OOP"
+        - "ONO"
+        - "OOO"
+      mapping:
+        N: "NETHERITE_BLOCK"
+        O: "OBSIDIAN"
+        P: "ENDER_PEARL"
