--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <minimizeJar>false</minimizeJar>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                     <relocations>
                         <relocation>
                             <pattern>au.com.grieve.bcf</pattern>
@@ -132,7 +134,7 @@
         <dependency>
             <groupId>au.com.grieve.bcf</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -144,8 +146,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.9.8</version>
+            <version>2.13.3</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.yaml</groupId>
+                    <artifactId>snakeyaml</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
